adding fork me ribbon

--- a/src/res/css/site.less
+++ b/src/res/css/site.less
@@ -31,10 +31,17 @@ a {
 	display: none;
 }
 
+.forkme {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 99;
+}
+
 .info {
 	background-color: rgba(0,0,0,0.15 );
 	position: absolute;
-	top: 10px;
+	bottom: 10px;
 	left: 10px;
 	width: 140px;
 	padding: 3px 6px;
